# link-cpp-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build-C.sh  build.sh  head.h  main.c  main.cpp  rust.hpp
src/: lib.rs  point.rs  read_vector.rs
